// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if active edit item is not exist, dialog form is not visible 1`] = `
<ProductForm
  item={null}
  setVariantPrice={[MockFunction]}
  variantPrice=""
/>
`;

exports[`renders closed shell with no active item 1`] = `
<ProductForm
  item={null}
/>
`;

exports[`renders dialog form when active item is set up 1`] = `
<ProductForm
  item={
    Object {
      "configurable_options": Array [
        "option1",
        "option2",
      ],
      "id": "123",
      "prices": Object {
        "price": Object {
          "currency": "EUR",
          "value": "456.78",
        },
      },
      "product": Object {
        "id": 123,
        "name": "Juno Sweater",
        "sku": "ABC",
        "small_image": Object {
          "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw02-pe_main_2.jpg",
        },
        "stock_status": "IN STOCK",
      },
      "quantity": 5,
    }
  }
  setVariantPrice={[MockFunction]}
  variantPrice=""
/>
`;
